objects/SMM_Implementations__c.object
<CustomObject>
    <fields>
        <fullName>ACV__c</fullName>
        <label>ACV Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;$500k</fullName>
                </value>
                <value>
                    <fullName>$150k - $499k</fullName>
                </value>
                <value>
                    <fullName>$75k - $150k</fullName>
                </value>
                <value>
                    <fullName>$35k-$75k</fullName>
                </value>
                <value>
                    <fullName>&lt;$35k</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>API_Integration_with__c</fullName>
        <label>API Integration with</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>API__c</fullName>
        <label>API</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Abstract_Management_Adoption_Status__c</fullName>
        <label>Abstract Management Adoption Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Abstract_Management_License_Type__c</fullName>
        <label>Abstract Management License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Account__r.Account_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Client Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SMM_Implementations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active_ARA__c</fullName>
        <formula>Parent_Account__r.Active_ARA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active ARA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Discreet_Services__c</fullName>
        <inlineHelpText>Includes Special Projects, Integrations and/or if the client is using Event Builder Team, Crowd Compass, Alliance Tech, OnArrival360, etc</inlineHelpText>
        <label>Active Discrete Services or Projects</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Imp_Project__c</fullName>
        <label>Active Imp Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Integration_Prj__c</fullName>
        <label>Active Integration Prj</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_POC__c</fullName>
        <inlineHelpText>List any additional contacts you interact with for the account. This is used for SA CSAT Survey distributed each fall</inlineHelpText>
        <label>Additional POC for CSAT</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Strength__c</fullName>
        <inlineHelpText>Select 'NA' when the client is in Implementation.
Select value Post-Imp or as system admin changes occur.
Weak is typically selected 0-6 months Post Imp.
Avg is typically selected 6-24 months Post-Imp.</inlineHelpText>
        <label>Admin Strength</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Support_Level__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>NA_in_Formal_imp</fullName>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amex_Card_Integration__c</fullName>
        <label>Amex Card Integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Business_Review_Date__c</fullName>
        <label>Last Business Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Economic_ValueDNU__c</fullName>
        <formula>IF(of_years__c&lt;1,Current_Economic_Value__c ,Current_Economic_Value__c / of_years__c)</formula>
        <label>Current Annual Contract Value ($)(DNU)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Any_special_documentation_drafted__c</fullName>
        <label>Any special documentation drafted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attending_Connect__c</fullName>
        <label>Attending Connect</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - US</fullName>
                </value>
                <value>
                    <fullName>Yes - EU</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Automated_Approval__c</fullName>
        <label>Automated Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Annual_value__c</fullName>
        <formula>IF(OR(ISNULL(of_Contract_Years__c),ISNULL(Economic_Value__c)),0,Economic_Value__c / of_Contract_Years__c)</formula>
        <label>Original Annual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Blue_Whale__c</fullName>
        <formula>if(
or(
Economic_Value__c  &gt;= 450000,
 PS_Contracted_Hours__c  &gt; 200, Average_Annual_value__c &gt;150000
),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blue Whale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branding_Package__c</fullName>
        <label>Branding Package</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Adoption_Status__c</fullName>
        <label>Budget Adoption Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Policies__c</fullName>
        <label>Budget Policies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_Adoption_Status__c</fullName>
        <label>CSN Adoption Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_Annual_Commitment_Number_Amount__c</fullName>
        <label>CSN Annual Commitment Number/Amount</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSN_Commitment__c</fullName>
        <label>CSN Commitment on</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName># of Awarded RFPs</fullName>
                </value>
                <value>
                    <fullName># of Room Nights</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>$ Value</fullName>
                </value>
                <value>
                    <fullName># of RFPs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSN_License_Type__c</fullName>
        <label>CSN License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSR_Month__c</fullName>
        <formula>MONTH( Upcoming_Business_Review_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSR Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_Other__c</fullName>
        <label>Managed by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CVII__c</fullName>
        <label>Cvent Account #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Account__c</fullName>
        <label>Child Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Citi_Card_Integration__c</fullName>
        <label>Citi Card Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification_Score__c</fullName>
        <formula>If(
Average_Annual_value__c  &lt;= 41000,1,
If(
AND(
Average_Annual_value__c  &gt;= 41001,
Average_Annual_value__c  &lt;= 120000),2,3))

 + 
If(
PS_Contracted_Hours__c &lt;=40, 1,
IF(
AND(
PS_Contracted_Hours__c &gt;=41,
PS_Contracted_Hours__c &lt;=100),
2,3))

+
If(
 of_Users__c  &lt;=20, 1,
IF(
AND(
 of_Users__c  &gt;=21,
 of_Users__c  &lt;=50),
2,3))


+
If(
Multi_Phase__c=true,1,0)
+
If(
Ongoing_Scope__c=true,1,0)
+
If(
Complex_Org_Structure__c=true,1,0)
+
If(
Expedited_Implementation__c=true,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Imp_Lead_Strength__c</fullName>
        <label>Client Imp Lead Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Lead</fullName>
                </value>
                <value>
                    <fullName>2-3 Leads</fullName>
                </value>
                <value>
                    <fullName>Lead by Committee of 3+</fullName>
                </value>
                <value>
                    <fullName>Worse than Committee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Proficiency__c</fullName>
        <label>Client Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>Mediocre</fullName>
                </value>
                <value>
                    <fullName>Strong</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Temp__c</fullName>
        <inlineHelpText>RED: Plans to terminate contract; Sr. Mgmt escalation; Risk of not implementing
YELLOW: May not renew; Unhappy w Product/Service/Contract; Tech Mgmt escalation
GREEN: Happy w products/services
WHITE GLOVE: High profile/$Value; Sr. Mgmt engaged in acct.</inlineHelpText>
        <label>Client Temp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#009900</color>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#FFFF66</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>White Glove</fullName>
                    <color>#3333FF</color>
                    <label>White Glove</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Temperature_Reason__c</fullName>
        <label>Client Temperature Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Transition__c</fullName>
        <label>Client Transition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_canceling_weekly_calls__c</fullName>
        <label>Client canceling weekly calls</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Out_Call_Date__c</fullName>
        <label>Close Out Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_frequency__c</fullName>
        <label>Communication frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Support_Level__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Less than Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Cut_off_date__c</fullName>
        <label>Competitor Cut off date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complex_Org_Structure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complex Org Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <formula>IF(
Classification_Score__c &lt;=6,"Low",
If(
AND(
Classification_Score__c &gt;=7,
Classification_Score__c &lt;=10),"Medium","High")
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complexity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concur_Expense__c</fullName>
        <label>Concur Expense</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Close_Date__c</fullName>
        <label>Contract Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Contract_Close_Date__c  +  (of_Contract_Years__c  * 365)</formula>
        <label>Original Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Ending_Qtr__c</fullName>
        <formula>IF( AND(MONTH(Contract_End_Date__c)&gt;= 1,MONTH(Contract_End_Date__c)&lt;= 3),"Jan 1-March 30",
 IF(AND(MONTH(Contract_End_Date__c)&gt;=4,MONTH(Contract_End_Date__c)&lt;=6),"Apr 1-June 30",
 IF(AND(MONTH(Contract_End_Date__c)&gt;=7,MONTH(Contract_End_Date__c)&lt;=9),"July 1-Sep 30","Oct 1- Dec 31")))</formula>
        <label>Contract Ending Qtr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>SA Managed Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Year__c</fullName>
        <formula>Text(YEAR(Contract_Close_Date__c))</formula>
        <label>Contract Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracted_Registrations_Type__c</fullName>
        <label>Contracted Registrations Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracting_Notes__c</fullName>
        <label>Original Contracting Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CrowdCompass_Account_ID__c</fullName>
        <formula>Account__r.CrowdCompass_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CrowdCompass Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crowd_Compass_Account__c</fullName>
        <label>Crowd Compass Account #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crowd_Compass__c</fullName>
        <label>Crowd Compass</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implemented &gt; 25</fullName>
                </value>
                <value>
                    <fullName>Implemented &lt; 10</fullName>
                </value>
                <value>
                    <fullName>Implemented 11-25</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Annual_Contract_Value__c</fullName>
        <label>Current Annual Contract Value ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Competitor__c</fullName>
        <label>Current Competitor</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Contractual_Comments__c</fullName>
        <label>Current Contracting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Economic_Value__c</fullName>
        <label>Current Total Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Imp_Week_4_New__c</fullName>
        <formula>IF(((Kick_Off_Date__c)+28) &lt;  TODAY(), "No", IF(ISBLANK(Kick_Off_Date__c),"","Yes"))</formula>
        <label>Current Imp Week &lt; 4 (New)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Imp_Week_4__c</fullName>
        <label>Current Imp Week &lt; 4</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Implementation_Phase__c</fullName>
        <label>Current Implementation Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beginning</fullName>
                    <default>true</default>
                    <label>Beginning</label>
                </value>
                <value>
                    <fullName>MidPoint</fullName>
                </value>
                <value>
                    <fullName>End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_RFP_Commitment__c</fullName>
        <label>Current RFP Commitment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_RFP_sourced_from_Central_America__c</fullName>
        <label>Current RFP sourced from Central America</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_RFPs_sourced_from_Africa__c</fullName>
        <label>Current RFPs sourced from Africa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_RFPs_sourced_from_Asia__c</fullName>
        <label>Current RFPs sourced from Asia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_RFPs_sourced_from_Australia__c</fullName>
        <label>Current RFPs sourced from Australia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_RFPs_sourced_from_Europe__c</fullName>
        <label>Current RFPs sourced from Europe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_RFPs_sourced_from_Middle_East__c</fullName>
        <label>Current RFPs sourced from Middle East</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_RFPs_sourced_from_North_America__c</fullName>
        <label>Current RFPs sourced from North America</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_RFPs_sourced_from_South_America__c</fullName>
        <label>Current RFPs sourced from South America</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_RFPs_sourced_from_UK__c</fullName>
        <label>Current RFPs sourced from UK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_RN_Commitment__c</fullName>
        <label>Current RN Commitment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Account_ID__c</fullName>
        <formula>Account__r.Cvent_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cvent Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Sandbox_Account_Number__c</fullName>
        <formula>Account__r.Cvent_Sandbox_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cvent Sandbox Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_inactive__c</fullName>
        <inlineHelpText>Do not add a date if the SA Managed Account status = "Active"</inlineHelpText>
        <label>SA Managed Date inactive</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_for_Review__c</fullName>
        <label>Due for Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EC_Contracted_ARR_Client__c</fullName>
        <formula>Account__r.Share_of_Wallet_Client__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EC Contracted ARR (Client)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Economic_Value__c</fullName>
        <label>Original Total Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Business_Review__c</fullName>
        <label>Eligible for CSR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eloqua__c</fullName>
        <label>Eloqua</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>